--- a/css/sp.css
+++ b/css/sp.css
@@ -45,7 +45,9 @@
 .icon-close-white{ background-position: 0 -1316px; width: 13px; height: 13px; }
 .icon-delete-white{ background-position: 0 -1349px; width: 29px; height: 29px; }
 .icon-delete-opacity{ background-position: 0 -1398px; width: 29px; height: 29px; }
+.places-item.delete .mask .icon-mask-place,
 .icon-delete-lg-white{ background-position: 0 -1447px; width: 41px; height: 41px; }
+.places-item .mask .icon-mask-place,
 .icon-done-lg-white{ background-position: 0 -1508px; width: 41px; height: 41px; }
 .icon-edit-white{ background-position: 0 -1569px; width: 19px; height: 19px; }
 .icon-settings-white{ background-position: 0 -1608px; width: 25px; height: 24px; }
