--- a/css/widgets.css
+++ b/css/widgets.css
@@ -1083,7 +1083,7 @@ div.cselect .ui-multiselect-checkboxes label.ui-state-active{
 }
 .scrollable .scroll-bar{
 	display: none;
-	/*border-radius: 3px;*/
+	border-radius: 3px;
 	z-index: 3;
 }
 .scrollable .scroll-bar.vertical{
@@ -1093,7 +1093,7 @@ div.cselect .ui-multiselect-checkboxes label.ui-state-active{
 	bottom: 0;
 	height: auto !important;
 	background: rgba(67,81,94,0.35);
-	/*box-shadow: 0 -3px 0 rgba(67,81,94,0.35), 0 3px 0 rgba(67,81,94,0.35);*/
+	box-shadow: 0 -3px 0 rgba(67,81,94,0.35), 0 3px 0 rgba(67,81,94,0.35);
 }
 .scrollable .scroll-bar.horizontal{
 	position: relative;
